manifest/istio/vs-route-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /be-service/
    - uri:
        prefix: /be-service
    rewrite:
        uri: /
    route:
    - destination:
        host: sa-be-svc.demo.svc.cluster.local
        port:
          number: 80
